<resources>
    <string name="app_name">AquaGuardian</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="water_quality_record">Water Quality Record</string>
    <string name="date">Date</string>
    <string name="dd_mm_yyyy">DD /MM / YYYY</string>
    <string name="water_color">Water Color</string>
    <string name="clear">Clear</string>
    <string name="slightly_dirty">Slightly Dirty</string>
    <string name="smell">Smell</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="notes">Notes</string>
    <string name="save_record">Save Record</string>
    <string name="enter_notes_here">Enter notes here</string>
    <string name="view_water_quality_history">View Water Quality History</string>
</resources>