<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#D6EFF8">

    <ImageView
        android:id="@+id/btnBack"
        android:layout_width="32dp"
        android:layout_height="32dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/new_backarrow"
        android:contentDescription="@null"
        app:tint="#0F1E80"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imgLogo"
        android:layout_width="110dp"
        android:layout_height="110dp"
        android:layout_marginTop="16dp"
        android:src="@drawable/aqua_logo"
        android:contentDescription="@null"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:text="@string/water_quality_record"
        android:textColor="#000000"
        android:textSize="26sp"
        android:textStyle="bold"
        android:fontFamily="serif"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imgLogo" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:fillViewport="true"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle"
        app:layout_bottom_toTopOf="@+id/bottomContainer">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingHorizontal="32dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="center_vertical"
                android:layout_marginBottom="28dp">

                <TextView
                    android:id="@+id/lblDate"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    tools:ignore="TouchTargetSizeCheck"
                    android:id="@+id/etDate"
                    android:layout_width="180dp"
                    android:layout_height="36dp"
                    android:background="#A2D7F2"
                    android:hint="@string/dd_mm_yyyy"
                    android:importantForAutofill="no"
                    android:textColorHint="#709CB4"
                    android:gravity="center"
                    android:inputType="date"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top"
                android:layout_marginBottom="28dp">

                <TextView
                    android:id="@+id/lblWaterColor"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/water_color"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_marginTop="2dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginEnd="24dp">
                        <CheckBox
                            tools:ignore="TouchTargetSizeCheck"
                            android:id="@+id/cbClear"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:button="@null"
                            android:background="#A2D7F2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/clear"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <CheckBox
                            tools:ignore="TouchTargetSizeCheck"
                            android:id="@+id/cbDirty"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:button="@null"
                            android:background="#A2D7F2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/slightly_dirty"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top"
                android:layout_marginBottom="28dp">

                <TextView
                    android:id="@+id/lblSmell"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/smell"
                    android:textColor="#000000"
                    android:textSize="20sp"
                    android:layout_marginTop="2dp"/>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center"
                        android:layout_marginEnd="36dp">
                        <CheckBox
                            tools:ignore="TouchTargetSizeCheck"
                            android:id="@+id/cbSmellYes"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:button="@null"
                            android:background="#A2D7F2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/yes"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp" />
                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="35dp"
                        android:layout_height="wrap_content"
                        android:orientation="vertical"
                        android:gravity="center">
                        <CheckBox
                            tools:ignore="TouchTargetSizeCheck"
                            android:id="@+id/cbSmellNo"
                            android:layout_width="35dp"
                            android:layout_height="35dp"
                            android:button="@null"
                            android:background="#A2D7F2" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/no"
                            android:textColor="#000000"
                            android:textSize="16sp"
                            android:layout_marginTop="4dp" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:gravity="top"
                android:layout_marginBottom="20dp">

                <TextView
                    android:id="@+id/lblNotes"
                    android:layout_width="110dp"
                    android:layout_height="wrap_content"
                    android:text="@string/notes"
                    android:textColor="#000000"
                    android:textSize="20sp" />

                <EditText
                    android:hint="@string/enter_notes_here"
                    tools:ignore="TouchTargetSizeCheck"
                    android:id="@+id/etNotes"
                    android:layout_width="210dp"
                    android:layout_height="75dp"
                    android:background="#A2D7F2"
                    android:gravity="top|start"
                    android:importantForAutofill="no"
                    android:padding="8dp"
                    android:inputType="textMultiLine"
                    android:textColor="#000000"
                    android:textSize="15sp" />
            </LinearLayout>

        </LinearLayout>
    </ScrollView>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/bottomContainer"
        android:layout_width="match_parent"
        android:layout_height="165dp"
        app:layout_constraintBottom_toBottomOf="parent">

        <ImageView
            android:id="@+id/imgWave"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:importantForAccessibility="no"
            android:scaleType="fitXY"
            android:src="@drawable/water_wave" />

        <Button
            android:id="@+id/btnSaveRecord"
            android:layout_width="210dp"
            android:layout_height="50dp"
            android:text="@string/save_record"
            android:textColor="#000000"
            android:textSize="18sp"
            android:textStyle="bold"
            android:textAllCaps="false"
            android:backgroundTint="#BCE6F8"
            app:cornerRadius="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:layout_marginTop="10dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>